[tool.poetry]
name = "quart-mongo"
version = "0.1.0"
description = "MongoDB extension for Quart using Motor and Odmantic."
authors = ["Chris Rood <quart.addons@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "quart_mongo"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
odmantic = "^0.9.2"
motor = "^3.1.1"
pymongo = "^4.3.3"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
Sphinx = "^6.1.3"
pydata-sphinx-theme = "^0.13.1"
quart-schema = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
