[project]
name = "quart-mongo"
version = "0.1.3"
description = "Quart Mongo bridges Quart, PyMongo, and Beanie to create a powerful MongoDB extension for your Quart application."
authors = [
    {name = "Chris Rood",email = "quart.addons@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/Quart-Addons/quart-mongo"
homepage = "https://github.com/Quart-Addons/quart-mongo"
requires-python = ">=3.12, <4.0"

packages = [
{include = "quart_mongo"},
{include = "quart_mongo/py.typed"}
]

dependencies = [
    "quart (>=0.20.0)",
    "pymongo (>=4.13.2)",
    "motor (>=3.7.1)",
    "motor-types (>=1.0.0b4,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[project.optional-dependencies]
beanie = ["beanie >=1.30.0", "pydantic >=2.11", "quart-schema >=0.22.0"]
odmantic = ["odmantic >=1.0.2", "pydantic >=2.11", "quart-schema >=0.22.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]